Deployed using FastAPI,Streamlit,Docker,Cassandra Database

--- a/Dockerfile-frontend
+++ b/Dockerfile-frontend
@@ -2,11 +2,17 @@ FROM python:3.9-slim
 
 WORKDIR /app
 
+# Copy and install dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Ensure the local bin folder is in the PATH
+ENV PATH="/root/.local/bin:${PATH}"
+
+# Copy the frontend file
 COPY frontend.py frontend.py
 
 EXPOSE 8501
 
+# Use the exec form to run the Streamlit app
 CMD ["streamlit", "run", "frontend.py", "--server.port", "8501", "--server.address", "0.0.0.0"]
